--- a/projects/utils/interval/bin/test.dSYM/Contents/Resources/Relocations/aarch64/test.yml
+++ b/projects/utils/interval/bin/test.dSYM/Contents/Resources/Relocations/aarch64/test.yml
@@ -2,54 +2,54 @@
 triple:          'arm64-apple-darwin'
 binary-path:     'bin/test'
 relocations:
-  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _interval_is_empty, symObjAddr: 0x0, symBinAddr: 0x100001B4C, symSize: 0xC }
-  - { offsetInCU: 0x4F, offset: 0x4F, size: 0x8, addend: 0x0, symName: _interval_is_empty, symObjAddr: 0x0, symBinAddr: 0x100001B4C, symSize: 0xC }
-  - { offsetInCU: 0x78, offset: 0x78, size: 0x8, addend: 0x0, symName: _interval_equal, symObjAddr: 0xC, symBinAddr: 0x100001B58, symSize: 0x10 }
-  - { offsetInCU: 0xB0, offset: 0xB0, size: 0x8, addend: 0x0, symName: _interval_contains, symObjAddr: 0x1C, symBinAddr: 0x100001B68, symSize: 0x10 }
-  - { offsetInCU: 0xE8, offset: 0xE8, size: 0x8, addend: 0x0, symName: _interval_intersection, symObjAddr: 0x2C, symBinAddr: 0x100001B78, symSize: 0x68 }
-  - { offsetInCU: 0x160, offset: 0x160, size: 0x8, addend: 0x0, symName: _interval_difference, symObjAddr: 0x94, symBinAddr: 0x100001BE0, symSize: 0x258 }
-  - { offsetInCU: 0x1CE, offset: 0x1CE, size: 0x8, addend: 0x0, symName: _interval_shift, symObjAddr: 0x2EC, symBinAddr: 0x100001E38, symSize: 0x80 }
-  - { offsetInCU: 0x26, offset: 0x2A1, size: 0x8, addend: 0x0, symName: _test_contains, symObjAddr: 0x0, symBinAddr: 0x100001ED0, symSize: 0x130 }
-  - { offsetInCU: 0x3B, offset: 0x2B6, size: 0x8, addend: 0x0, symName: ___func__.test_contains, symObjAddr: 0xE20, symBinAddr: 0x100003060, symSize: 0x0 }
-  - { offsetInCU: 0x6B, offset: 0x2E6, size: 0x8, addend: 0x0, symName: _.str, symObjAddr: 0xE40, symBinAddr: 0x100003080, symSize: 0x0 }
-  - { offsetInCU: 0x88, offset: 0x303, size: 0x8, addend: 0x0, symName: _.str.1, symObjAddr: 0xE60, symBinAddr: 0x1000030A0, symSize: 0x0 }
-  - { offsetInCU: 0xA5, offset: 0x320, size: 0x8, addend: 0x0, symName: _.str.2, symObjAddr: 0xEC0, symBinAddr: 0x100003100, symSize: 0x0 }
-  - { offsetInCU: 0xB6, offset: 0x331, size: 0x8, addend: 0x0, symName: _.str.3, symObjAddr: 0xF20, symBinAddr: 0x100003160, symSize: 0x0 }
-  - { offsetInCU: 0xD3, offset: 0x34E, size: 0x8, addend: 0x0, symName: _.str.4, symObjAddr: 0xF60, symBinAddr: 0x1000031A0, symSize: 0x0 }
-  - { offsetInCU: 0xE4, offset: 0x35F, size: 0x8, addend: 0x0, symName: ___func__.test_equals, symObjAddr: 0xFC0, symBinAddr: 0x100003200, symSize: 0x0 }
-  - { offsetInCU: 0x101, offset: 0x37C, size: 0x8, addend: 0x0, symName: _.str.5, symObjAddr: 0xFE0, symBinAddr: 0x100003220, symSize: 0x0 }
-  - { offsetInCU: 0x11E, offset: 0x399, size: 0x8, addend: 0x0, symName: _.str.6, symObjAddr: 0x1020, symBinAddr: 0x100003260, symSize: 0x0 }
-  - { offsetInCU: 0x12F, offset: 0x3AA, size: 0x8, addend: 0x0, symName: _.str.7, symObjAddr: 0x1060, symBinAddr: 0x1000032A0, symSize: 0x0 }
-  - { offsetInCU: 0x14C, offset: 0x3C7, size: 0x8, addend: 0x0, symName: ___func__.test_is_empty, symObjAddr: 0x10A0, symBinAddr: 0x1000032E0, symSize: 0x0 }
-  - { offsetInCU: 0x15D, offset: 0x3D8, size: 0x8, addend: 0x0, symName: _.str.8, symObjAddr: 0x10C0, symBinAddr: 0x100003300, symSize: 0x0 }
-  - { offsetInCU: 0x16E, offset: 0x3E9, size: 0x8, addend: 0x0, symName: _.str.9, symObjAddr: 0x1100, symBinAddr: 0x100003340, symSize: 0x0 }
-  - { offsetInCU: 0x17F, offset: 0x3FA, size: 0x8, addend: 0x0, symName: _.str.10, symObjAddr: 0x1140, symBinAddr: 0x100003380, symSize: 0x0 }
-  - { offsetInCU: 0x190, offset: 0x40B, size: 0x8, addend: 0x0, symName: _.str.11, symObjAddr: 0x1180, symBinAddr: 0x1000033C0, symSize: 0x0 }
-  - { offsetInCU: 0x1A1, offset: 0x41C, size: 0x8, addend: 0x0, symName: ___func__.test_intersection, symObjAddr: 0x11C0, symBinAddr: 0x100003400, symSize: 0x0 }
-  - { offsetInCU: 0x1BE, offset: 0x439, size: 0x8, addend: 0x0, symName: _.str.12, symObjAddr: 0x1200, symBinAddr: 0x100003440, symSize: 0x0 }
-  - { offsetInCU: 0x1DB, offset: 0x456, size: 0x8, addend: 0x0, symName: _.str.13, symObjAddr: 0x1280, symBinAddr: 0x1000034C0, symSize: 0x0 }
-  - { offsetInCU: 0x1F8, offset: 0x473, size: 0x8, addend: 0x0, symName: _.str.14, symObjAddr: 0x1300, symBinAddr: 0x100003540, symSize: 0x0 }
-  - { offsetInCU: 0x215, offset: 0x490, size: 0x8, addend: 0x0, symName: _.str.15, symObjAddr: 0x1380, symBinAddr: 0x1000035C0, symSize: 0x0 }
-  - { offsetInCU: 0x232, offset: 0x4AD, size: 0x8, addend: 0x0, symName: _.str.16, symObjAddr: 0x13E0, symBinAddr: 0x100003620, symSize: 0x0 }
-  - { offsetInCU: 0x243, offset: 0x4BE, size: 0x8, addend: 0x0, symName: _.str.17, symObjAddr: 0x1440, symBinAddr: 0x100003680, symSize: 0x0 }
-  - { offsetInCU: 0x254, offset: 0x4CF, size: 0x8, addend: 0x0, symName: ___func__.test_difference, symObjAddr: 0x14C0, symBinAddr: 0x100003700, symSize: 0x0 }
-  - { offsetInCU: 0x271, offset: 0x4EC, size: 0x8, addend: 0x0, symName: _.str.18, symObjAddr: 0x14E0, symBinAddr: 0x100003720, symSize: 0x0 }
-  - { offsetInCU: 0x28E, offset: 0x509, size: 0x8, addend: 0x0, symName: _.str.19, symObjAddr: 0x1540, symBinAddr: 0x100003780, symSize: 0x0 }
-  - { offsetInCU: 0x2AB, offset: 0x526, size: 0x8, addend: 0x0, symName: _.str.20, symObjAddr: 0x15A0, symBinAddr: 0x1000037E0, symSize: 0x0 }
-  - { offsetInCU: 0x2BC, offset: 0x537, size: 0x8, addend: 0x0, symName: _.str.21, symObjAddr: 0x1600, symBinAddr: 0x100003840, symSize: 0x0 }
-  - { offsetInCU: 0x2D9, offset: 0x554, size: 0x8, addend: 0x0, symName: _.str.22, symObjAddr: 0x1680, symBinAddr: 0x1000038C0, symSize: 0x0 }
-  - { offsetInCU: 0x2EA, offset: 0x565, size: 0x8, addend: 0x0, symName: _.str.23, symObjAddr: 0x16E0, symBinAddr: 0x100003920, symSize: 0x0 }
-  - { offsetInCU: 0x2FB, offset: 0x576, size: 0x8, addend: 0x0, symName: _.str.24, symObjAddr: 0x1760, symBinAddr: 0x1000039A0, symSize: 0x0 }
-  - { offsetInCU: 0x30C, offset: 0x587, size: 0x8, addend: 0x0, symName: _.str.25, symObjAddr: 0x17C0, symBinAddr: 0x100003A00, symSize: 0x0 }
-  - { offsetInCU: 0x31D, offset: 0x598, size: 0x8, addend: 0x0, symName: _.str.26, symObjAddr: 0x1820, symBinAddr: 0x100003A60, symSize: 0x0 }
-  - { offsetInCU: 0x32E, offset: 0x5A9, size: 0x8, addend: 0x0, symName: _.str.27, symObjAddr: 0x1880, symBinAddr: 0x100003AC0, symSize: 0x0 }
-  - { offsetInCU: 0x33F, offset: 0x5BA, size: 0x8, addend: 0x0, symName: _.str.28, symObjAddr: 0x18E0, symBinAddr: 0x100003B20, symSize: 0x0 }
-  - { offsetInCU: 0x35C, offset: 0x5D7, size: 0x8, addend: 0x0, symName: _.str.29, symObjAddr: 0x1940, symBinAddr: 0x100003B80, symSize: 0x0 }
-  - { offsetInCU: 0x36D, offset: 0x5E8, size: 0x8, addend: 0x0, symName: _.str.30, symObjAddr: 0x19C0, symBinAddr: 0x100003C00, symSize: 0x0 }
-  - { offsetInCU: 0x392, offset: 0x60D, size: 0x8, addend: 0x0, symName: _test_contains, symObjAddr: 0x0, symBinAddr: 0x100001ED0, symSize: 0x130 }
-  - { offsetInCU: 0x4C3, offset: 0x73E, size: 0x8, addend: 0x0, symName: _test_equals, symObjAddr: 0x130, symBinAddr: 0x100002000, symSize: 0xE8 }
-  - { offsetInCU: 0x5BB, offset: 0x836, size: 0x8, addend: 0x0, symName: _test_is_empty, symObjAddr: 0x218, symBinAddr: 0x1000020E8, symSize: 0x110 }
-  - { offsetInCU: 0x67D, offset: 0x8F8, size: 0x8, addend: 0x0, symName: _test_intersection, symObjAddr: 0x328, symBinAddr: 0x1000021F8, symSize: 0x1F8 }
-  - { offsetInCU: 0x864, offset: 0xADF, size: 0x8, addend: 0x0, symName: _test_difference, symObjAddr: 0x520, symBinAddr: 0x1000023F0, symSize: 0x84C }
-  - { offsetInCU: 0xB7D, offset: 0xDF8, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0xD6C, symBinAddr: 0x100002C3C, symSize: 0x28 }
+  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _interval_is_empty, symObjAddr: 0x0, symBinAddr: 0x100001AF0, symSize: 0xC }
+  - { offsetInCU: 0x4F, offset: 0x4F, size: 0x8, addend: 0x0, symName: _interval_is_empty, symObjAddr: 0x0, symBinAddr: 0x100001AF0, symSize: 0xC }
+  - { offsetInCU: 0x78, offset: 0x78, size: 0x8, addend: 0x0, symName: _interval_equal, symObjAddr: 0xC, symBinAddr: 0x100001AFC, symSize: 0x10 }
+  - { offsetInCU: 0xB0, offset: 0xB0, size: 0x8, addend: 0x0, symName: _interval_contains, symObjAddr: 0x1C, symBinAddr: 0x100001B0C, symSize: 0x10 }
+  - { offsetInCU: 0xE8, offset: 0xE8, size: 0x8, addend: 0x0, symName: _interval_intersection, symObjAddr: 0x2C, symBinAddr: 0x100001B1C, symSize: 0x68 }
+  - { offsetInCU: 0x160, offset: 0x160, size: 0x8, addend: 0x0, symName: _interval_difference, symObjAddr: 0x94, symBinAddr: 0x100001B84, symSize: 0x258 }
+  - { offsetInCU: 0x1CE, offset: 0x1CE, size: 0x8, addend: 0x0, symName: _interval_shift, symObjAddr: 0x2EC, symBinAddr: 0x100001DDC, symSize: 0x80 }
+  - { offsetInCU: 0x26, offset: 0x2A1, size: 0x8, addend: 0x0, symName: _test_contains, symObjAddr: 0x0, symBinAddr: 0x100001E74, symSize: 0x130 }
+  - { offsetInCU: 0x3B, offset: 0x2B6, size: 0x8, addend: 0x0, symName: ___func__.test_contains, symObjAddr: 0xE20, symBinAddr: 0x100003020, symSize: 0x0 }
+  - { offsetInCU: 0x6B, offset: 0x2E6, size: 0x8, addend: 0x0, symName: _.str, symObjAddr: 0xE40, symBinAddr: 0x100003040, symSize: 0x0 }
+  - { offsetInCU: 0x88, offset: 0x303, size: 0x8, addend: 0x0, symName: _.str.1, symObjAddr: 0xE60, symBinAddr: 0x100003060, symSize: 0x0 }
+  - { offsetInCU: 0xA5, offset: 0x320, size: 0x8, addend: 0x0, symName: _.str.2, symObjAddr: 0xEC0, symBinAddr: 0x1000030C0, symSize: 0x0 }
+  - { offsetInCU: 0xB6, offset: 0x331, size: 0x8, addend: 0x0, symName: _.str.3, symObjAddr: 0xF20, symBinAddr: 0x100003120, symSize: 0x0 }
+  - { offsetInCU: 0xD3, offset: 0x34E, size: 0x8, addend: 0x0, symName: _.str.4, symObjAddr: 0xF60, symBinAddr: 0x100003160, symSize: 0x0 }
+  - { offsetInCU: 0xE4, offset: 0x35F, size: 0x8, addend: 0x0, symName: ___func__.test_equals, symObjAddr: 0xFC0, symBinAddr: 0x1000031C0, symSize: 0x0 }
+  - { offsetInCU: 0x101, offset: 0x37C, size: 0x8, addend: 0x0, symName: _.str.5, symObjAddr: 0xFE0, symBinAddr: 0x1000031E0, symSize: 0x0 }
+  - { offsetInCU: 0x11E, offset: 0x399, size: 0x8, addend: 0x0, symName: _.str.6, symObjAddr: 0x1020, symBinAddr: 0x100003220, symSize: 0x0 }
+  - { offsetInCU: 0x12F, offset: 0x3AA, size: 0x8, addend: 0x0, symName: _.str.7, symObjAddr: 0x1060, symBinAddr: 0x100003260, symSize: 0x0 }
+  - { offsetInCU: 0x14C, offset: 0x3C7, size: 0x8, addend: 0x0, symName: ___func__.test_is_empty, symObjAddr: 0x10A0, symBinAddr: 0x1000032A0, symSize: 0x0 }
+  - { offsetInCU: 0x15D, offset: 0x3D8, size: 0x8, addend: 0x0, symName: _.str.8, symObjAddr: 0x10C0, symBinAddr: 0x1000032C0, symSize: 0x0 }
+  - { offsetInCU: 0x16E, offset: 0x3E9, size: 0x8, addend: 0x0, symName: _.str.9, symObjAddr: 0x1100, symBinAddr: 0x100003300, symSize: 0x0 }
+  - { offsetInCU: 0x17F, offset: 0x3FA, size: 0x8, addend: 0x0, symName: _.str.10, symObjAddr: 0x1140, symBinAddr: 0x100003340, symSize: 0x0 }
+  - { offsetInCU: 0x190, offset: 0x40B, size: 0x8, addend: 0x0, symName: _.str.11, symObjAddr: 0x1180, symBinAddr: 0x100003380, symSize: 0x0 }
+  - { offsetInCU: 0x1A1, offset: 0x41C, size: 0x8, addend: 0x0, symName: ___func__.test_intersection, symObjAddr: 0x11C0, symBinAddr: 0x1000033C0, symSize: 0x0 }
+  - { offsetInCU: 0x1BE, offset: 0x439, size: 0x8, addend: 0x0, symName: _.str.12, symObjAddr: 0x1200, symBinAddr: 0x100003400, symSize: 0x0 }
+  - { offsetInCU: 0x1DB, offset: 0x456, size: 0x8, addend: 0x0, symName: _.str.13, symObjAddr: 0x1280, symBinAddr: 0x100003480, symSize: 0x0 }
+  - { offsetInCU: 0x1F8, offset: 0x473, size: 0x8, addend: 0x0, symName: _.str.14, symObjAddr: 0x1300, symBinAddr: 0x100003500, symSize: 0x0 }
+  - { offsetInCU: 0x215, offset: 0x490, size: 0x8, addend: 0x0, symName: _.str.15, symObjAddr: 0x1380, symBinAddr: 0x100003580, symSize: 0x0 }
+  - { offsetInCU: 0x232, offset: 0x4AD, size: 0x8, addend: 0x0, symName: _.str.16, symObjAddr: 0x13E0, symBinAddr: 0x1000035E0, symSize: 0x0 }
+  - { offsetInCU: 0x243, offset: 0x4BE, size: 0x8, addend: 0x0, symName: _.str.17, symObjAddr: 0x1440, symBinAddr: 0x100003640, symSize: 0x0 }
+  - { offsetInCU: 0x254, offset: 0x4CF, size: 0x8, addend: 0x0, symName: ___func__.test_difference, symObjAddr: 0x14C0, symBinAddr: 0x1000036C0, symSize: 0x0 }
+  - { offsetInCU: 0x271, offset: 0x4EC, size: 0x8, addend: 0x0, symName: _.str.18, symObjAddr: 0x14E0, symBinAddr: 0x1000036E0, symSize: 0x0 }
+  - { offsetInCU: 0x28E, offset: 0x509, size: 0x8, addend: 0x0, symName: _.str.19, symObjAddr: 0x1540, symBinAddr: 0x100003740, symSize: 0x0 }
+  - { offsetInCU: 0x2AB, offset: 0x526, size: 0x8, addend: 0x0, symName: _.str.20, symObjAddr: 0x15A0, symBinAddr: 0x1000037A0, symSize: 0x0 }
+  - { offsetInCU: 0x2BC, offset: 0x537, size: 0x8, addend: 0x0, symName: _.str.21, symObjAddr: 0x1600, symBinAddr: 0x100003800, symSize: 0x0 }
+  - { offsetInCU: 0x2D9, offset: 0x554, size: 0x8, addend: 0x0, symName: _.str.22, symObjAddr: 0x1680, symBinAddr: 0x100003880, symSize: 0x0 }
+  - { offsetInCU: 0x2EA, offset: 0x565, size: 0x8, addend: 0x0, symName: _.str.23, symObjAddr: 0x16E0, symBinAddr: 0x1000038E0, symSize: 0x0 }
+  - { offsetInCU: 0x2FB, offset: 0x576, size: 0x8, addend: 0x0, symName: _.str.24, symObjAddr: 0x1760, symBinAddr: 0x100003960, symSize: 0x0 }
+  - { offsetInCU: 0x30C, offset: 0x587, size: 0x8, addend: 0x0, symName: _.str.25, symObjAddr: 0x17C0, symBinAddr: 0x1000039C0, symSize: 0x0 }
+  - { offsetInCU: 0x31D, offset: 0x598, size: 0x8, addend: 0x0, symName: _.str.26, symObjAddr: 0x1820, symBinAddr: 0x100003A20, symSize: 0x0 }
+  - { offsetInCU: 0x32E, offset: 0x5A9, size: 0x8, addend: 0x0, symName: _.str.27, symObjAddr: 0x1880, symBinAddr: 0x100003A80, symSize: 0x0 }
+  - { offsetInCU: 0x33F, offset: 0x5BA, size: 0x8, addend: 0x0, symName: _.str.28, symObjAddr: 0x18E0, symBinAddr: 0x100003AE0, symSize: 0x0 }
+  - { offsetInCU: 0x35C, offset: 0x5D7, size: 0x8, addend: 0x0, symName: _.str.29, symObjAddr: 0x1940, symBinAddr: 0x100003B40, symSize: 0x0 }
+  - { offsetInCU: 0x36D, offset: 0x5E8, size: 0x8, addend: 0x0, symName: _.str.30, symObjAddr: 0x19C0, symBinAddr: 0x100003BC0, symSize: 0x0 }
+  - { offsetInCU: 0x392, offset: 0x60D, size: 0x8, addend: 0x0, symName: _test_contains, symObjAddr: 0x0, symBinAddr: 0x100001E74, symSize: 0x130 }
+  - { offsetInCU: 0x4C3, offset: 0x73E, size: 0x8, addend: 0x0, symName: _test_equals, symObjAddr: 0x130, symBinAddr: 0x100001FA4, symSize: 0xE8 }
+  - { offsetInCU: 0x5BB, offset: 0x836, size: 0x8, addend: 0x0, symName: _test_is_empty, symObjAddr: 0x218, symBinAddr: 0x10000208C, symSize: 0x110 }
+  - { offsetInCU: 0x67D, offset: 0x8F8, size: 0x8, addend: 0x0, symName: _test_intersection, symObjAddr: 0x328, symBinAddr: 0x10000219C, symSize: 0x1F8 }
+  - { offsetInCU: 0x864, offset: 0xADF, size: 0x8, addend: 0x0, symName: _test_difference, symObjAddr: 0x520, symBinAddr: 0x100002394, symSize: 0x84C }
+  - { offsetInCU: 0xB7D, offset: 0xDF8, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0xD6C, symBinAddr: 0x100002BE0, symSize: 0x34 }
 ...
